@@ -37,7 +37,11 @@
 
 #ifdef __WXMAC__
 	#include <CoreServices/CoreServices.h> // Do_not_auto_remove
-	#include <wx/mac/corefoundation/cfstring.h> // Do_not_auto_remove
+	#if wxCHECK_VERSION(2, 9, 0)
+		#include <wx/osx/core/cfstring.h>  // Do_not_auto_remove
+	#else
+		#include <wx/mac/corefoundation/cfstring.h>  // Do_not_auto_remove
+	#endif
 	#include <wx/intl.h> // Do_not_auto_remove
 #elif defined(__WXMSW__)
 	#include <winerror.h> // Do_not_auto_remove
@@ -133,8 +137,13 @@ wxString GetDefaultAmulesigPath()
 		CFURLRef	urlRef		= CFURLCreateFromFSRef(NULL, &fsRef);
 		CFStringRef	cfString	= CFURLCopyFileSystemPath(urlRef, kCFURLPOSIXPathStyle);
 		CFRelease(urlRef) ;
-		strDir = wxMacCFStringHolder(cfString).AsString(wxLocale::GetSystemEncoding())
+		#if wxCHECK_VERSION(2, 9, 0)
+			strDir = wxCFStringRef(cfString).AsString(wxLocale::GetSystemEncoding())
 			+ wxFileName::GetPathSeparator() + wxT("aMule");
+		#else
+			strDir = wxMacCFStringHolder(cfString).AsString(wxLocale::GetSystemEncoding())
+			+ wxFileName::GetPathSeparator() + wxT("aMule");
+		#endif
 	}
 
 #elif defined(__WXMSW__)
